# EuroBERT

./: LICENSE.TXT  README.md  main.py  pyproject.toml
docs/: dataprocess.md  trainer.md
examples/: continuous_pretraining.ipynb
exemples/data/packed/train/: index.json
exemples/data/tokenized/: index.json
exemples/mix/: train.json  train_2.json
optimus/: train.py
optimus/dataprocess/: __init__.py  inspect_dataset.py  pack_dataset.py  subsample_dataset.py  tokenize_dataset.py
optimus/dataprocess/dataset/: IndustryCorpus.py  agentInstruct.py  ayaInstruct.py  codeBagel.py  culturaX.py  finemath.py  fineweb.py  industryCorpus2.py  languageFiltered.py  long_alpaca.py  openPerfectblend.py  parallel.py  proof-pile-2.py  smolTalk.py  the-stack.py  wikipedia.py
optimus/trainer/: data.py  distributed.py  pretrain.py  profile_model.py  trainer.md
optimus/trainer/configuration/: configs.py  dataset.py  distributed.py  model.py  system.py  train.py
optimus/trainer/model/: load.py  model.py  tools.py
optimus/trainer/model/encoder/: bert.py  eurobert.py
optimus/trainer/script/: cache.py  warmup_stable_decay_lr.py
