[project]
name = "optimus"
version = "0.9"
authors = [
  { name="Nicolas Boizard", email="nicolas.bzrd@gmail.com" },
  { name="Duarte Alves", email="duartemalves@tecnico.ulisboa.pt" },
]
description = "Lybrary to train encoder models, written in Python using pytorch and compatible with all GPUs."
readme = "README.md"
requires-python = ">=3.11.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
]

[project.urls]
Homepage = "https://github.com/Nicolas-BZRD/EuroBERT"
Issues = "https://github.com/Nicolas-BZRD/EuroBERT/issues"